# kafka_rust-rdkafka

./: .gitignore  Makefile  README.md
docker/: docker-compose.yml
docker/secrets/: kafka_server_jaas.conf
rust_kafka/: .env  Cargo.toml
rust_kafka/src/: main.rs
rust_kafka/src/kafka/: config.rs  consumer_async.rs  consumer_sync.rs  mod.rs  producer_async.rs  producer_sync.rs
